<resources>
    <string name="app_name">每刻</string>

    <string name="dialog_tip">你的系统大于等于5.0，我们需要获取 “查看应用使用情况” 权限</string>

    <string name="accessibility_description">开启系统服务可以减少系统电量消耗</string>
    <string name="device_admin_description">注册成为设备管理器可以防止恶意卸载</string>

    <string name="title_activity_lock">专注时间</string>
    <string name="title_change_password">设置密码</string>
    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password2">确认密码</string>
    <string name="action_sign_in">小玩一下</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">用户名无效</string>
    <string name="error_invalid_password">密码长度过短</string>
    <string name="error_not_matching_password">两次输入的密码不一致</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">请填写这个字段</string>

    <string name="advanced_lock">高级锁定引擎</string>
    <string name="lock_install">锁定安装卸载、修改权限界面</string>
    <string name="lock_auto_screen">关闭屏幕后自动锁定</string>
    <string name="hide_icon">隐藏桌面图标</string>
    <string name="setting_password">设置密码</string>
    <string name="auto_start">设置开机自动启动</string>
    <string name="background_run">加入锁屏清理白名单</string>
    <string name="no_clear">加入一键清理白名单</string>
    <string name="device_admin">注册成为设备管理器</string>
    <string name="setting">设置</string>
    <string name="lock_status">开启专注时间</string>
    <string name="lock_start">开始学习</string>
    <string name="lock_stop">点我开始学习</string>
    <string name="lock_start_cycle_model">专心学习中</string>
    <string name="lock_start_advanced_model">专心学习中</string>
    <string name="cycle_model">轮询模式</string>
    <string name="advanced_model">辅助功能模式</string>
    <string name="remove_device_admin_success">已移除设备管理器</string>
    <string name="not_found_setting_screen">未找到设置界面，请到手机管家中设置</string>
    <string name="setting_auto_start">请将「专注时间」设置为自动启动</string>
    <string name="setting_no_clear">请将「专注时间」设置为不清理</string>
    <string name="not_found_setting_screen_2">未找到设置界面，请手动设置</string>
    <string name="add_white_list_tip1">单击系统菜单键弹出最近运行的任务页面，长按/上滑/下滑本应用，点击加锁按钮。需要解除锁定时，你需要回到这个页面，然后在最近运行的任务中对本应用解除锁定。同时如果您的手机中有手机管家，您需要将本应用加入内存清理白名单当中。</string>
    <string name="add_white_list_tip2">在弹出的最近运行任务页面中，长按/上滑/下滑本应用，点击加锁按钮。需要解除锁定时，你需要回到这个页面，然后在最近运行的任务中对本应用解除锁定。同时如果您的手机中有手机管家，您需要将本应用加入内存清理白名单当中。</string>
    <string name="add_white_list_toast_tip1">单击系统菜单键，（长按/上滑/下滑本应用）点击加锁按钮</string>
    <string name="add_white_list_toast_tip2">（长按/上滑/下滑应用图标）点击加锁按钮</string>


    <!--设置-->
    <string name="about">关于我们</string>
    <string name="exit">退出</string>
    <string name="exit_account">退出当前账号</string>
    <string name="exit_app">退出应用</string>
    <string name="help_feedback">帮助与反馈</string>

    <!--我的个人信息-->
    <string name="header_pic">头像</string>
    <string name="wechat_account">微信号</string>
    <string name="qr_code_card">二维码名片</string>
    <string name="my_location">我的地址</string>
    <string name="gender">性别</string>
    <string name="not_fill">未填写</string>
    <!--用户信息-->
    <string name="nickname_colon">昵称:%1$s</string>
    <string name="set_alias_and_tag">设置备注和标签</string>
    <string name="signature">个性签名</string>
    <string name="send_message">发消息</string>
    <string name="add_to_contact">添加到通讯录</string>
    <string name="add_to_black_list">加入黑名单</string>
    <string name="delete">删除</string>
    <string name="add_to_desktop">添加到桌面</string>
    <string name="change_my_name_tip">好名字可以让你的朋友 更容易记住你。</string>
    <string name="delete_contact">删除联系人</string>
    <string name="delete_contact_content">将联系人%1$s删除，将同时删除与该联系人的聊天记录</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="save_to_phone">保存到手机</string>
    <!--注册-->
    <string name="nickname">昵称</string>
    <string name="password">密码</string>
    <string name="area">国家/地区</string>
    <string name="verification_code">验证码</string>
    <string name="error_code">异常码：</string>
    <string name="please_check_net">请检查网络</string>
    <string name="load_error">加载失败</string>
    <string name="please_wait">请稍等</string>
    <string name="content_no_empty">内容不能为空</string>
    <string name="complete">完成</string>
    <string name="change_success">修改成功</string>
    <string name="change_fail">修改失败</string>
    <string name="set_success">设置成功</string>
    <string name="set_fail">设置失败</string>
    <string name="save">保存</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>

    <string name="greeting_hint">Change greeting</string>
    <string name="fetch_value">Get greeting</string>
    <string name="write">Write</string>
    <string name="gas_limit">Gas limit:%s</string>
    <string name="gas_price">Gas price:%sGwei</string>
    <string name="smart_contract_value">Smart contract value</string>
</resources>
